--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@
   --link-color: #F497CA;
   --link-hover-color: #F497CA;
   --primary-color: #F497CA;
-  --background-color: #FFFCFB;
+  --background-color: #EBE6DF;
   --light-color: #eee;
   --dark-color: #ccc;
   --text-color: #232323;
