--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,14 @@
 /* MOBILE */
+@keyframes slide-down {
+  from { transform: translateY(-100dvh); }
+  to { transform: translateY(0); }
+}
+
+@keyframes slide-up {
+  from { transform: translateY(0); }
+  to { transform: translateY(-100dvh); }
+}
+
 header nav {
   background-color: var(--background-color);
   height: 60px;
@@ -60,6 +70,7 @@ header nav[aria-expanded="true"] .nav-breadcrumb {
   transition-delay: 0.2s;
 }
 
+/* Nav-links Mobile */
 header .nav-links .default-content-wrapper {
   position: fixed;
   z-index: 1;
@@ -75,11 +86,6 @@ header .nav-links[aria-expanded="false"] {
   visibility: hidden;
 }
 
-header .nav-links ul li img {
-  height: 400px;
-  width: 400px;
-}
-
 header nav[aria-expanded="true"] .nav-links .default-content-wrapper ul {
   animation: slide-down 0.5s backwards;
 }
@@ -88,58 +94,58 @@ header nav[aria-expanded="false"] .nav-links .default-content-wrapper ul {
   animation: slide-up 0.5s forwards;
 }
 
-@keyframes slide-down {
-  from { transform: translateY(-100dvh); }
-  to { transform: translateY(0); }
-}
-
-@keyframes slide-up {
-  from { transform: translateY(0); }
-  to { transform: translateY(-100dvh); }
-}
-
-header li {
+header .nav-links li {
   background-color: var(--background-color);
-  /* color: #232323; */
+  border-bottom: 4px solid var(--primary-dark);
   flex-grow: 1;
-  border-bottom: 1px solid #F497CA;
-  display: flex;
-  flex-flow: column;
-  flex-direction: column-reverse;
+  position: relative;
 }
 
-header a {
+header .nav-links li a {
   cursor: default;
-  padding: 20px;
   text-decoration: none;
   color: #232323 !important;
   display: flex;
 }
 
-header a span {
-  flex-grow: 1;
+header .nav-links li img {
+  position: absolute;
+  bottom: 0; 
+  top: 5%;
+  right: 50px;
+  left: 50px;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border: 4px solid var(--primary-dark);
 }
 
-/* header li:hover {
-  background-color: #F497CA;
-} */
+header .nav-links li strong {
+  position: absolute;
+  top: 5%;
+  left: 3%;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+  font-size: var(--body-font-size-m);
+}
 
-header li.hide-menu {
+header .nav-links li.hide-menu {
   /* dvh is device height and this needs to be applied because in mobile (IOS) there are navigation heights that are applied to the bottom and top of the viewport that  */
   transform: translateY(-100dvh);
 }
 
-/* header li:hover a {
-  color: #fff !important;
-  text-decoration: none;
-} */
-
-header li:first-child {
-  border-top: 1px solid #F497CA;
+header .nav-links li:last-child {
+  border-bottom: none;
 }
 
-header li:last-child {
-  border-bottom: none;
+/* NAV-LINKS DESKTOP */
+@media (width >= 900px) {
+  header .nav-links li strong {
+    left: 2%;
+  }
 }
 
 /* Brand */
@@ -268,7 +274,6 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
   }
   
   header li {
-    border-right: 1px solid #F497CA;
     border-bottom: none;
   }
 
