--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@
   --link-hover-color: #F497CA;
   --primary-color: #F497CA;
   --background-color: #EBE6DF;
+  --primary-dark: #232323;
   --light-color: #eee;
   --dark-color: #ccc;
   --text-color: #232323;
