--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -21,22 +21,85 @@ header nav[aria-expanded="false"] {
   border-bottom: none;
 }
 
+/* NAV-BRAND */
+header .nav-brand p span {
+  display: flex;
+}
+
+header .nav-brand .default-content-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+header .nav-brand img {
+  height: 26px;
+  width: 26px;
+}
+
+header .nav-brand h4 {
+  font-size: var(--body-font-size-xxs);
+  margin: 0;
+  padding-left: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+/* NAV-BRAND DESKTOP */
+@media (width >= 900px) {
+  header .nav-brand h4 {
+    font-size: var(--body-font-size-s);
+    margin: 0;
+    padding-left: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+}
+
+/* NAV-BREADCRUMB */
+header .nav-breadcrumb {
+  position: fixed;
+  left: 196px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: var(--body-font-size-xxs);
+  display: flex;
+  align-items: center;
+  padding-top: 2px;
+}
+
+/* NAV-BREADCRUMB DESKTOP */
+@media (width >= 900px) {
+  header .nav-breadcrumb {
+    position: fixed;
+    left: 266px;
+    font-size: var(--body-font-size-s);
+    padding-top: 0;
+  }
+}
+
 header .nav-brand,
 header .nav-breadcrumb,
 header .nav-hamburger {
     z-index: 2;
 }
 
-header .nav-breadcrumb {
-  position: fixed;
-  font-size: 16px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100px;
-  font-weight: 600;
-}
+/* Show the breadcrumb */
+/* header nav[aria-expanded="false"] .nav-breadcrumb {
+  opacity: 1;
+  transition-delay: 0.7s;
+} */
 
-/* ANDI - This looks weird to me, should probably have .nav-links inbetween the header and ul. */
+/* Hide the breadcrumb */
+/* header nav[aria-expanded="true"] .nav-breadcrumb {
+  opacity: 0;
+  transition: opacity 0.2s;
+  transition-delay: 0.2s;
+} */
+
+/* NAV_LINKS MOBILE */
 header ul {
   display: flex;
   flex-flow: column;
@@ -47,20 +110,6 @@ header ul {
   width: 100%;
 }
 
-/* Show the breadcrumb */
-header nav[aria-expanded="false"] .nav-breadcrumb {
-  opacity: 1;
-  transition-delay: 0.7s;
-}
-
-/* Hide the breadcrumb */
-header nav[aria-expanded="true"] .nav-breadcrumb {
-  opacity: 0;
-  transition: opacity 0.2s;
-  transition-delay: 0.2s;
-}
-
-/* Nav-links Mobile */
 header .nav-links .default-content-wrapper {
   position: fixed;
   z-index: 1;
@@ -146,25 +195,6 @@ header .nav-links li:last-child {
   header .nav-links li strong {
     left: 2%;
   }
-}
-
-/* Brand */
-header .nav-brand {
-  grid-area: brand;
-  flex-basis: 128px;
-}
-
-header .nav-brand .default-content-wrapper{
-  justify-content: flex-start;
-}
-
-header nav .nav-brand p {
-  margin: 0;
-}
-
-header nav .nav-brand img {
-  width: 75px;
-  height: auto;
 }
 
 /* hamburger */
