--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -1,17 +1,33 @@
+.columns {
+  white-space: none;
+  overflow: hidden;
+  margin-left: calc(-50vw + 50%);
+  margin-top: 30px;
+}
+
 .columns > div {
   display: flex;
   flex-direction: column;
-}
-
-.columns img {
-  width: 100%;
 }
 
 .columns > div > div {
   order: 1;
 }
 
-.columns > div > .columns-img-col {
+.columns > div > div:last-child {
+  margin: 16px;
+}
+
+.columns-img-col {
+  height: 350px;
+  object-fit: contain;
+  overflow: hidden;
+  position: relative;
+  border-top: 4px solid var(--primary-dark);
+  border-right: 4px solid var(--primary-dark);
+  border-bottom: 4px solid var(--primary-dark);
+  margin-right: 20px;
+  background-color: #BAC1A1;
   order: 0;
 }
 
@@ -28,5 +44,17 @@
   .columns > div > div {
     flex: 1;
     order: unset;
+  }
+
+  .columns-img-col {
+    height: 100vh;
+    border: none;
+    background-color: transparent;
+  }
+
+  .columns img {
+    position: absolute;
+    bottom: 0;
+    top: -2%;
   }
 }
