--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -12,7 +12,7 @@
 }
 
 .cards .cards-card-body {
-  margin: 16px 8px 16px 8px;
+  margin: 16px 8px;
   display: flex;
   flex-flow: row;
   align-items: flex-start;
