--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,80 +1,50 @@
-.cards > ul {
+.cards ul {
   list-style: none;
-  margin: 26px 0;
-  padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(278px, 1fr));
-  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 40px;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 40px;
 }
 
-.cards > ul > li {
-  background-color: var(--background-color)
+.cards .cards-card-image a {
+  object-fit: cover;
+}
+
+.cards .cards-card-image a img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; 
+}
+
+.cards .cards-card-image a:last-child {
+  display: none;
+}
+
+.cards .cards-card-image:hover a:first-child {
+  display: none;
+}
+
+.cards .cards-card-image:hover a:last-child {
+  display: block;
 }
 
 .cards .cards-card-body {
-  margin: 16px 8px;
   display: flex;
-  flex-flow: row;
-  align-items: flex-start;
   justify-content: space-between;
+  align-items: center;
 }
 
-.cards .cards-card-body p {
-  margin: 0;
-  display: flex;
-}
-
-.cards .cards-card-body strong {
-  background-color: var(--primary-color);
-  padding: 2px 16px;
-  border-radius: 40px;
-  font-weight: 300;
-  font-size: small;
-  color: var(--background-color);
-  text-align: right;
-}
-
-.cards .cards-card-image {
-  line-height: 0;
-}
-
-.cards .cards-card-body > *:first-child {
-  margin-top: 0;
-}
-
-.cards > ul > li img {
-  width: 100%;
-  aspect-ratio: 4 / 3;
-  object-fit: cover;
-  border-radius: 6px;
-
-  /* Make the image greyscale */
-  /* filter: grayscale(100%);  */
-
-  /* Smooth transition when hovering */
-  /* transition: filter 0.05s ease-in-out;  */
-}
-
-.cards > ul > li img:hover {
-  /* filter: grayscale(0%); */
-  border: 2px solid var(--primary-color); 
-}
-
-.cards .cards-card-body strong {
-  background-color: transparent;
-  border: 1px solid var(--primary-color);
-  padding: 2px 10px;
-  border-radius: 20px;
-  font-weight: 400;
-  font-size: var(--body-font-size-xxs);
-  color: var(--primary-color);
-  text-align: right;
-  margin: 0 4px;
+.cards .cards-card-body {
+  margin-top: 10px;
+  text-transform: uppercase;
 }
 
 /* DESKTOP */
 @media (width >= 900px) {
-  .cards > ul {
-    grid-template-columns: repeat(auto-fill, minmax(700px, 1fr));
+  .cards ul {
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
   }
 }
