--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,11 @@
   --link-color: #F497CA;
   --link-hover-color: #F497CA;
   --primary-color: #F497CA;
-  --background-color: #EBE6DF;
+  --background-color: #f7f7f9;
+  --normal-color: #0B21E3;
+  --ls-color: #D1134A;
+  --fable-color: #FBC13F;
+  --cofi-color: #5F25E9;
   --primary-dark: #232323;
   --light-color: #eee;
   --dark-color: #ccc;
