--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,22 +1,45 @@
 .cards ul {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-gap: 40px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 10px;
   padding: 0;
   margin: 0;
-  margin-bottom: 40px;
 }
 
-.cards .cards-card-image a {
-  object-fit: cover;
+.cards ul li {
+  position: relative;
+}
+
+.cards .cards-card-image {
+  display: flex;
+  padding-left: 50px;
 }
 
 .cards .cards-card-image a img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%; 
+  top: 5%;
+  left: 50px;
+  object-fit: cover;
+  width: 95%;
+  height: 100%;
+  border: 4px solid #232323;
+}
+
+/* TODO - Hate this logic, it's all hard coded, need to fix */
+.cards ul li:nth-child(1) .cards-card-image a img:hover {
+  border: 4px solid var(--normal-color);
+}
+
+.cards ul li:nth-child(2) .cards-card-image a img:hover {
+  border: 4px solid var(--ls-color);
+}
+
+.cards ul li:nth-child(3) .cards-card-image a img:hover {
+  border: 4px solid var(--fable-color);
+}
+
+.cards ul li:nth-child(4) .cards-card-image a img:hover {
+  border: 4px solid var(--cofi-color);
 }
 
 .cards .cards-card-image a:last-child {
@@ -32,25 +55,30 @@
 }
 
 .cards .cards-card-body {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.cards .cards-card-body {
   margin-top: 10px;
+  position: absolute;
+  top: 2%;
+  left: 3%;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  font-weight: 500;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 6px;
+  font-size: var(--body-font-size-s);
 }
 
 /* DESKTOP */
 @media (width >= 900px) {
   .cards ul {
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(475px, 1fr));
+  }
+
+  .cards .cards-card-image a img {
+    height: calc(100vh - 150px);
+    width: 100%;
   }
 
   .cards .cards-card-body {
-    font-size: 20px;
-    font-weight: 600;
+    top: 8px;
   }
 }
