--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -22,7 +22,7 @@
   object-fit: cover;
   width: 95%;
   height: 100%;
-  border: 4px solid #232323;
+  border: 4px solid var(--primary-dark);
 }
 
 /* TODO - Hate this logic, it's all hard coded, need to fix */
