Added padding to content section in about me for xl desktop screen.

--- a/blocks/highlight/highlight.css
+++ b/blocks/highlight/highlight.css
@@ -75,3 +75,10 @@
     }
 }
 
+/* XL DESKTOP */
+@media (width >= 1824px) {
+    .highlight > div > div:last-child {
+        padding: 0 200px;
+    }
+}
+
