--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -25,8 +25,12 @@
   border: 4px solid var(--primary-dark);
 }
 
+/* .cards ul li .cards-card-image a img:hover {
+  background-color: aliceblue;
+} */
+
 /* TODO - Hate this logic, it's all hard coded, need to fix */
-.cards ul li:nth-child(1) .cards-card-image a img:hover {
+/* .cards ul li:nth-child(1) .cards-card-image a img:hover {
   border: 4px solid var(--normal-color);
 }
 
@@ -40,7 +44,7 @@
 
 .cards ul li:nth-child(4) .cards-card-image a img:hover {
   border: 4px solid var(--cofi-color);
-}
+} */
 
 .cards .cards-card-image a:last-child {
   display: none;
