--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,7 +62,7 @@
 }
 
 body {
-  font-size: var(--body-font-size-s);
+  font-size: var(--body-font-size-xs);
   margin: 0;
   font-family: var(--body-font-family);
   line-height: 1.6;
