--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -23,7 +23,7 @@ header nav[aria-expanded="false"] {
 }
 
 /* NAV-BRAND */
-header .nav-brand{
+header .nav-brand {
   cursor: pointer;
 }
 
@@ -46,7 +46,6 @@ header .nav-brand h4 {
   margin: 0;
   padding-left: 12px;
   font-weight: 600;
-  text-transform: uppercase;
   letter-spacing: 2px;
 }
 
@@ -57,7 +56,6 @@ header .nav-brand h4 {
     margin: 0;
     padding-left: 12px;
     font-weight: 600;
-    text-transform: uppercase;
     letter-spacing: 2px;
   }
 }
@@ -66,12 +64,11 @@ header .nav-brand h4 {
 header .nav-breadcrumb {
   position: fixed;
   font-weight: 600;
-  text-transform: uppercase;
   letter-spacing: 2px;
   font-size: var(--body-font-size-xxs);
   display: flex;
   align-items: center;
-  margin-left: 200px;
+  margin-left: 155px;
 }
 
 /* NAV-BREADCRUMB DESKTOP */
@@ -80,7 +77,7 @@ header .nav-breadcrumb {
     position: fixed;
     font-size: var(--body-font-size-s);
     padding-top: 0;
-    margin-left: 270px;
+    margin-left: 212px;
   }
 }
 
@@ -136,7 +133,6 @@ header nav[aria-expanded="false"] .nav-links .default-content-wrapper ul {
 
 header .nav-links li {
   background-color: var(--background-color);
-  border-bottom: 4px solid var(--primary-dark);
   flex-grow: 1;
   position: relative;
 }
@@ -149,6 +145,7 @@ header .nav-links li a {
 }
 
 header .nav-links li img {
+  /* border: 4px solid var(--primary-dark); */
   position: absolute;
   bottom: 0; 
   top: 5%;
@@ -156,7 +153,6 @@ header .nav-links li img {
   object-fit: cover;
   width: 90%;
   height: 100%;
-  border: 4px solid var(--primary-dark);
 }
 
 header .nav-links li strong {
@@ -166,7 +162,6 @@ header .nav-links li strong {
   writing-mode: vertical-rl;
   transform: rotate(180deg);
   font-weight: 500;
-  text-transform: uppercase;
   letter-spacing: 6px;
   font-size: var(--body-font-size-m);
 }
@@ -176,9 +171,6 @@ header .nav-links li.hide-menu {
   transform: translateY(-100dvh);
 }
 
-header .nav-links li:last-child {
-  border-bottom: none;
-}
 
 /* NAV-LINKS DESKTOP */
 @media (width >= 900px) {
