--- a/blocks/tile-content/tile-content.css
+++ b/blocks/tile-content/tile-content.css
@@ -2,10 +2,24 @@
     margin-bottom: 60px;
 }
 
+.tile > div > div:nth-of-type(2) {
+    margin-left: 24px;
+}
+
+.tile > div > div > span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tile > div > div > span > img {
+    max-height: 150px;
+}
+
 /* DESKTOP */
 @media (width >= 900px) {
-    .tile-content > div > div {
-        width: 75%;
+    .tile-container > div > div {
+        margin: 0 20%;
     }
 }
 
